added login and signup function to frontend

--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="usernameContainer">
-        <h2>Enter Your Username</h2>
+    <div id="authContainer">
+        <h2>Register</h2>
         <input id="usernameInput" type="text" placeholder="Enter username">
-        <button onclick="setUsername()">Join Chat</button>
+        <input id="passwordInput" type="password" placeholder="Enter password">
+        <button onclick="registerUser()">Register</button>
+        <h2>OR</h2>
+        <h2>Login</h2>
+        <input id="loginUsernameInput" type="text" placeholder="Enter username">
+        <input id="loginPasswordInput" type="password" placeholder="Enter password">
+        <button onclick="loginUser()">Login</button>
     </div>
 
     <div id="chat-container" style="display: none;">
@@ -22,43 +28,90 @@
 
     <script src="/socket.io/socket.io.js"></script>
     <script>
+
         const socket = io();
-        let username = "";
+let username = "";
 
-        function setUsername() {
-            const input = document.getElementById("usernameInput").value.trim();
-            if (input) {
-                username = input;
-                document.getElementById("usernameContainer").style.display = "none";
+// Register User
+function registerUser() {
+    const username = document.getElementById("usernameInput").value.trim();
+    const password = document.getElementById("passwordInput").value.trim();
+
+    if (username && password) {
+        fetch("/register", {
+            method: "POST",
+            headers: {
+                "Content-Type": "application/json",
+            },
+            body: JSON.stringify({ username, password }),
+        })
+        .then((response) => response.text())
+        .then((data) => {
+            alert(data);
+        })
+        .catch((error) => console.error("Error:", error));
+    } else {
+        alert("Please fill in all fields.");
+    }
+}
+
+// Login User
+function loginUser() {
+    const username = document.getElementById("loginUsernameInput").value.trim();
+    const password = document.getElementById("loginPasswordInput").value.trim();
+
+    if (username && password) {
+        fetch("/login", {
+            method: "POST",
+            headers: {
+                "Content-Type": "application/json",
+            },
+            body: JSON.stringify({ username, password }),
+        })
+        .then((response) => response.text())
+        .then((data) => {
+            if (data === "Login successful!") {
+                document.getElementById("authContainer").style.display = "none";
                 document.getElementById("chat-container").style.display = "block";
+                username = username;
             } else {
-                alert("Please enter a username.");
+                alert(data);
             }
-        }
+        })
+        .catch((error) => console.error("Error:", error));
+    } else {
+        alert("Please fill in all fields.");
+    }
+}
 
-        function sendMessage() {
-            const input = document.getElementById("messageInput");
-            const message = input.value.trim();
-            if (message) {
-                socket.emit("chat message", { username, message });
-                input.value = "";
-            }
-        }
+// Send message
+function sendMessage() {
+    const input = document.getElementById("messageInput");
+    const message = input.value.trim();
+    if (message) {
+        socket.emit("chat message", { username, message });
+        input.value = "";
+    }
+}
 
-        socket.on("chat history", (messages) => {
-            const messageList = document.getElementById("messages");
-            messages.forEach(({ username, message }) => {
-                const li = document.createElement("li");
-                li.innerHTML = `<strong>${username}:</strong> ${message}`;
-                messageList.appendChild(li);
-            });
-        });
+// Display chat history
+socket.on("chat history", (messages) => {
+    const messageList = document.getElementById("messages");
+    messages.forEach(({ username, message }) => {
+        const li = document.createElement("li");
+        li.innerHTML = `<strong>${username}:</strong> ${message}`;
+        messageList.appendChild(li);
+    });
+});
 
-        socket.on("chat message", (data) => {
-            const li = document.createElement("li");
-            li.innerHTML = `<strong>${data.username}:</strong>${data.message}`;
-            document.getElementById("messages").appendChild(li);
-        });
+// Display new messages
+socket.on("chat message", (data) => {
+    const li = document.createElement("li");
+    li.innerHTML = `<strong>${data.username}:</strong> ${data.message}`;
+    document.getElementById("messages").appendChild(li);
+});
+
+
     </script>
 </body>
 </html>
