--- a/public/index.html
+++ b/public/index.html
@@ -1,117 +1,119 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chat App</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Chat App</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <div id="authContainer">
-        <h2>Register</h2>
-        <input id="usernameInput" type="text" placeholder="Enter username">
-        <input id="passwordInput" type="password" placeholder="Enter password">
-        <button onclick="registerUser()">Register</button>
-        <h2>OR</h2>
-        <h2>Login</h2>
-        <input id="loginUsernameInput" type="text" placeholder="Enter username">
-        <input id="loginPasswordInput" type="password" placeholder="Enter password">
-        <button onclick="loginUser()">Login</button>
-    </div>
+  <div id="authContainer">
+    <h2>Register</h2>
+    <label for="usernameInput">Username:</label>
+    <input id="usernameInput" type="text" placeholder="Enter username" />
+    <label for="passwordInput">Password:</label>
+    <input id="passwordInput" type="password" placeholder="Enter password" />
+    <button onclick="registerUser()">Register</button>
+    <hr />
+    <h2>Login</h2>
+    <label for="loginUsernameInput">Username:</label>
+    <input id="loginUsernameInput" type="text" placeholder="Enter username" />
+    <label for="loginPasswordInput">Password:</label>
+    <input id="loginPasswordInput" type="password" placeholder="Enter password" />
+    <button onclick="loginUser()">Login</button>
+  </div>
 
-    <div id="chat-container" style="display: none;">
-        <h2>Simple Chat</h2>
-        <ul id="messages"></ul>
-        <input id="messageInput" type="text" placeholder="Type a message...">
-        <button onclick="sendMessage()">Send</button>
-    </div>
+  <div id="chat-container" style="display: none;">
+    <h2>Simple Chat</h2>
+    <ul id="messages"></ul>
+    <input id="messageInput" type="text" placeholder="Type a message..." />
+    <button onclick="sendMessage()">Send</button>
+  </div>
 
-    <script src="/socket.io/socket.io.js"></script>
-    <script>
+  <script src="/socket.io/socket.io.js"></script>
+  <script>
+    const socket = io();
+    let username = "";
 
-        const socket = io();
-let username = "";
+    // Register User
+    function registerUser() {
+      const regUsername = document.getElementById("usernameInput").value.trim();
+      const regPassword = document.getElementById("passwordInput").value.trim();
 
-// Register User
-function registerUser() {
-    const username = document.getElementById("usernameInput").value.trim();
-    const password = document.getElementById("passwordInput").value.trim();
-
-    if (username && password) {
+      if (regUsername && regPassword) {
         fetch("/register", {
-            method: "POST",
-            headers: {
-                "Content-Type": "application/json",
-            },
-            body: JSON.stringify({ username, password }),
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json",
+          },
+          body: JSON.stringify({ username: regUsername, password: regPassword }),
         })
-        .then((response) => response.text())
-        .then((data) => {
-            alert(data);
-        })
-        .catch((error) => console.error("Error:", error));
-    } else {
+          .then((response) => response.json())
+          .then((data) => {
+            alert(data.message);
+          })
+          .catch((error) => console.error("Error:", error));
+      } else {
         alert("Please fill in all fields.");
+      }
     }
-}
 
-// Login User
-function loginUser() {
-    const username = document.getElementById("loginUsernameInput").value.trim();
-    const password = document.getElementById("loginPasswordInput").value.trim();
+    // Login User
+    function loginUser() {
+      const loginUsername = document.getElementById("loginUsernameInput").value.trim();
+      const loginPassword = document.getElementById("loginPasswordInput").value.trim();
 
-    if (username && password) {
+      if (loginUsername && loginPassword) {
         fetch("/login", {
-            method: "POST",
-            headers: {
-                "Content-Type": "application/json",
-            },
-            body: JSON.stringify({ username, password }),
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json",
+          },
+          body: JSON.stringify({ username: loginUsername, password: loginPassword }),
         })
-        .then((response) => response.text())
-        .then((data) => {
-            if (data === "Login successful!") {
-                document.getElementById("authContainer").style.display = "none";
-                document.getElementById("chat-container").style.display = "block";
-                username = data.username;
+          .then((response) => response.json())
+          .then((data) => {
+            if (data.message === "Login successful!") {
+              document.getElementById("authContainer").style.display = "none";
+              document.getElementById("chat-container").style.display = "block";
+              username = loginUsername;
             } else {
-                alert(data);
+              alert(data.message);
             }
-        })
-        .catch((error) => console.error("Error:", error));
-    } else {
+          })
+          .catch((error) => console.error("Error:", error));
+      } else {
         alert("Please fill in all fields.");
+      }
     }
-}
 
-// Send message
-function sendMessage() {
-    const input = document.getElementById("messageInput");
-    const message = input.value.trim();
-    if (message) {
+    // Send message
+    function sendMessage() {
+      const input = document.getElementById("messageInput");
+      const message = input.value.trim();
+      if (message) {
         socket.emit("chat message", { username, message });
         input.value = "";
+      }
     }
-}
 
-// Display chat history
-socket.on("chat history", (messages) => {
-    const messageList = document.getElementById("messages");
-    messages.forEach(({ username, message }) => {
+    // Display chat history
+    socket.on("chat history", (messages) => {
+      const messageList = document.getElementById("messages");
+      messageList.innerHTML = ""; // Clear existing messages
+      messages.forEach(({ username, message }) => {
         const li = document.createElement("li");
         li.innerHTML = `<strong>${username}:</strong> ${message}`;
         messageList.appendChild(li);
+      });
     });
-});
 
-// Display new messages
-socket.on("chat message", (data) => {
-    const li = document.createElement("li");
-    li.innerHTML = `<strong>${data.username}:</strong> ${data.message}`;
-    document.getElementById("messages").appendChild(li);
-});
-
-
-    </script>
+    // Display new messages
+    socket.on("chat message", (data) => {
+      const li = document.createElement("li");
+      li.innerHTML = `<strong>${data.username}:</strong> ${data.message}`;
+      document.getElementById("messages").appendChild(li);
+    });
+  </script>
 </body>
 </html>
