--- a/public/index.html
+++ b/public/index.html
@@ -71,7 +71,7 @@
   </div>
 
   <!-- ===== FULL-SCREEN CHAT SCREEN ===== -->
-  <!-- IMPORTANT: Do NOT use class="container" on this div -->
+  <!-- Do NOT use class="container" on this div -->
   <div id="chatContainer" style="display: none;">
     <div class="chat-card">
       <div class="chat-header">
@@ -80,6 +80,8 @@
           <button class="back-button" onclick="backToRoomSelection()">Back</button>
           <button class="logout-button" onclick="logoutUser()">Logout</button>
           <button class="mode-toggle" onclick="toggleDarkMode()">Toggle Mode</button>
+          <!-- Delete Room button, visible only to the room admin -->
+          <button id="deleteRoomBtn" class="delete-room-btn" onclick="deleteRoom()" style="display: none;">Delete Room</button>
         </div>
       </div>
       <ul id="messages"></ul>
@@ -89,7 +91,7 @@
         <!-- Hidden file input for attachments -->
         <input type="file" id="fileInput" style="display: none;" accept="image/*,video/*" onchange="uploadFile(this)" />
         <button onclick="document.getElementById('fileInput').click()">📎</button>
-        <button onclick="sendMessage()" style = "margin-left:10px">Send</button>
+        <button onclick="sendMessage()">Send</button>
       </div>
       <!-- Emoji Picker -->
       <div id="emojiPicker" style="display: none;">
@@ -108,8 +110,9 @@
     const socket = io();
     let username = "";
     let currentRoom = "";
+    let roomAdmin = ""; // Store the room creator's username
 
-    // Check session on page load
+    // Check session and apply saved theme on load
     window.onload = function() {
       fetch("/me")
         .then(response => response.json())
@@ -122,7 +125,6 @@
           }
         })
         .catch(err => console.error("Error checking session:", err));
-      // Apply saved theme
       const savedTheme = localStorage.getItem("theme");
       if (savedTheme === "dark") {
         document.body.classList.add("dark-mode");
@@ -135,18 +137,35 @@
 
     socket.on("joined room", roomName => {
       console.log("Successfully joined room:", roomName);
+      fetchRoomAdmin();
     });
 
     socket.on("chat history", messages => {
       const messageList = document.getElementById("messages");
       messageList.innerHTML = "";
       messages.forEach(msg => {
-        appendMessage(msg.username, msg.message, msg.media, msg.mediaType);
+        appendMessage(msg.username, msg.message, msg.media, msg.mediaType, msg.id);
       });
     });
 
     socket.on("chat message", data => {
-      appendMessage(data.username, data.message, data.media, data.mediaType);
+      appendMessage(data.username, data.message, data.media, data.mediaType, data.id);
+    });
+
+    socket.on("message deleted", data => {
+      const msgEl = document.querySelector(`[data-message-id="${data.messageId}"]`);
+      if (msgEl) msgEl.remove();
+    });
+
+    socket.on("room deleted", data => {
+      if (data.room === currentRoom) {
+        alert("This room has been deleted by the administrator.");
+        location.reload();
+      }
+    });
+
+    socket.on("admin error", errorMsg => {
+      alert(errorMsg);
     });
 
     /* ----- LOGIN/SIGNUP FUNCTIONS ----- */
@@ -218,7 +237,7 @@
           alert(data.message);
           username = "";
           currentRoom = "";
-          location.reload();  // Destroy session and reload page
+          location.reload();
         })
         .catch(error => console.error("Logout error:", error));
     }
@@ -270,10 +289,33 @@
       document.getElementById("chatContainer").style.display = "flex";
       document.getElementById("roomNameDisplay").textContent = room;
       document.getElementById("messages").innerHTML = "";
+      fetchRoomAdmin();
+    }
+
+    function fetchRoomAdmin() {
+      fetch(`/roomAdmin?room=${encodeURIComponent(currentRoom)}`)
+        .then(response => response.json())
+        .then(data => {
+          roomAdmin = data.created_by;
+          console.log("Room admin:", roomAdmin);
+          // Show "Delete Room" button if current user is the room admin.
+          if (username === roomAdmin) {
+            document.getElementById("deleteRoomBtn").style.display = "inline-block";
+          } else {
+            document.getElementById("deleteRoomBtn").style.display = "none";
+          }
+        })
+        .catch(err => console.error("Error fetching room admin:", err));
+    }
+
+    function deleteRoom() {
+      if (confirm("Are you sure you want to delete this room? This action cannot be undone.")) {
+        socket.emit("delete room", { room: currentRoom, username });
+      }
     }
 
     function backToRoomSelection() {
-      location.reload();  // Reload page to return to room selection
+      location.reload();
     }
 
     /* ----- CHAT FUNCTIONS ----- */
@@ -286,10 +328,10 @@
       }
     }
 
-    // Append message to the chat area. If media exists, display accordingly.
-    function appendMessage(sender, text, media, mediaType) {
+    function appendMessage(sender, text, media, mediaType, messageId) {
       const li = document.createElement("li");
       li.classList.add("message");
+      li.setAttribute("data-message-id", messageId);
       if (sender === username) {
         li.classList.add("mine");
       } else {
@@ -308,10 +350,20 @@
           content += `<div class="media"><a href="${media}" target="_blank">Download File</a></div>`;
         }
       }
+      // If the current user is the room admin, add a delete button.
+      if (username === roomAdmin) {
+        content += `<button class="delete-btn" onclick="deleteMessage(${messageId})">Delete</button>`;
+      }
       li.innerHTML = content;
       const messages = document.getElementById("messages");
       messages.appendChild(li);
       messages.scrollTop = messages.scrollHeight;
+    }
+
+    function deleteMessage(messageId) {
+      if (confirm("Are you sure you want to delete this message?")) {
+        socket.emit("delete message", { room: currentRoom, messageId, username });
+      }
     }
 
     /* ----- EMOJI PICKER FUNCTIONS ----- */
@@ -339,7 +391,6 @@
           .then(response => response.json())
           .then(data => {
             if (data.fileUrl) {
-              // Send a chat message with the media URL and type.
               const msgData = {
                 username,
                 message: "",
