--- a/public/index.html
+++ b/public/index.html
@@ -62,6 +62,8 @@
       <h2>Select a Room</h2>
       <div class="create-room">
         <input id="newRoomInput" type="text" placeholder="Enter new room name" />
+        <!-- New input field for an optional room code -->
+        <input id="newRoomCode" type="text" placeholder="Enter room code (optional)" />
         <button onclick="createRoom()">Create Room</button>
       </div>
       <h3>Or join an existing room:</h3>
@@ -134,6 +136,11 @@
     /* ----- SOCKET.IO EVENTS ----- */
     socket.on("connect", () => console.log("Connected to server"));
     socket.on("disconnect", () => console.log("Disconnected from server"));
+
+    // Handle room join errors (e.g. incorrect room code)
+    socket.on("join error", errorMsg => {
+      alert(errorMsg);
+    });
 
     socket.on("joined room", roomName => {
       console.log("Successfully joined room:", roomName);
@@ -262,6 +269,7 @@
 
     function createRoom() {
       const newRoom = document.getElementById("newRoomInput").value.trim();
+      const roomCode = document.getElementById("newRoomCode").value.trim();
       if (!newRoom) {
         alert("Please enter a room name.");
         return;
@@ -269,7 +277,7 @@
       fetch("/rooms", {
         method: "POST",
         headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ room_name: newRoom })
+        body: JSON.stringify({ room_name: newRoom, room_code: roomCode })
       })
         .then(response => response.json())
         .then(data => {
@@ -283,8 +291,10 @@
     }
 
     function joinRoom(room) {
+      // Prompt the user for a room code if needed
+      let code = prompt("Enter room code if required (leave blank otherwise):");
       currentRoom = room;
-      socket.emit("join room", room);
+      socket.emit("join room", { roomName: room, code: code });
       document.getElementById("roomContainer").style.display = "none";
       document.getElementById("chatContainer").style.display = "flex";
       document.getElementById("roomNameDisplay").textContent = room;
@@ -298,7 +308,6 @@
         .then(data => {
           roomAdmin = data.created_by;
           console.log("Room admin:", roomAdmin);
-          // Show "Delete Room" button if current user is the room admin.
           if (username === roomAdmin) {
             document.getElementById("deleteRoomBtn").style.display = "inline-block";
           } else {
@@ -350,7 +359,6 @@
           content += `<div class="media"><a href="${media}" target="_blank">Download File</a></div>`;
         }
       }
-      // If the current user is the room admin, add a delete button.
       if (username === roomAdmin) {
         content += `<button class="delete-btn" onclick="deleteMessage(${messageId})">Delete</button>`;
       }
