--- a/public/index.html
+++ b/public/index.html
@@ -112,7 +112,7 @@
       <div class="create-room">
         <input id="newRoomInput" type="text" placeholder="Enter new room name" />
         <!-- New input field for room code; it is now required -->
-        <input id="newRoomCode" type="text" placeholder="Enter room code" /><br>
+        <input id="newRoomCode" type="text" placeholder="Enter room code" />
         <button onclick="createRoom()">Create Room</button>
       </div>
       <h3>Or join an existing room:</h3>
