--- a/public/index.html
+++ b/public/index.html
@@ -75,7 +75,7 @@
             <input type="password" id="loginPassword" placeholder="Enter password" />
           </div>
           <button type="submit" class="auth-btn">Sign In</button>
-          <a href="#" class="forgot-link">Forgot your password?</a>
+          <a href="forgot-password.html" class="forgot-link">Forgot your password?</a>
         </form>
         <p class="switch-link">
           Don't have an account?
