--- a/public/profile.html
+++ b/public/profile.html
@@ -64,7 +64,7 @@
     <h2>Your Profile</h2>
     <!-- Profile display -->
     <div id="profile-info">
-      <img id="profile-picture" src="default-profile.png" alt="Profile Picture" />
+      <img id="profile-picture" src="uploads/default-profile.png" alt="Profile Picture" />
       <p><strong>Username:</strong> <span id="username"></span></p>
       <p><strong>Full Name:</strong> <span id="full-name"></span></p>
       <p><strong>Email:</strong> <span id="email"></span></p>
